# gofer2

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md
Modules/: Findcpprest.cmake
example/: cell-request.json  example-conf.json  example-request.json  example-request2.json  set-request.json  translate-request.json  translate-request2.json
script/: InfoMap_obo.py  Mapman2gopher.py  formatBlast2GO.py  getGo.sh  getPFAM.py  getPFAM.sh  leaf_terminal_cluster.tsv
src/: BSlogger.hpp  datastructures_flat.cpp  datastructures_flat.h  datastructures_go.cpp  datastructures_go.h  datastructures_hierarchical.cpp  datastructures_hierarchical.h  handle_enrichment.cpp  handle_get_sets.cpp  handle_get_sets.h  handle_translation.cpp  handle_translation.h  handlers.cpp  handlers.h  main.cpp  set_memberships.cpp  set_memberships.h  term.cpp  term.h  test.cpp  test.h  utility.cpp  utility.h
